--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,8 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
+  position: relative;
 }
 
 a {
